---
source: compiler/zrc_codegen/src/expr.rs
description: "fn get_bool() -> bool;\nfn get_int() -> i32;\nfn take_int(x: i32);\nfn test() {\n    // TEST: should produce a proper diamond-shaped cfg\n    let num = get_bool() ? get_int() : 3;\n    take_int(num);\n}\n"
expression: resulting_ir
---
; ModuleID = 'test.zr'
source_filename = "test.zr"

declare i1 @get_bool()

declare i32 @get_int()

declare {} @take_int(i32)

define {} @test() !dbg !3 {
entry:
  %let_num = alloca i32, align 4
  call void @llvm.dbg.declare(metadata ptr %let_num, metadata !9, metadata !DIExpression()), !dbg !13
  %call = call i1 @get_bool(), !dbg !14
  br i1 %call, label %if_true, label %if_false, !dbg !14

if_true:                                          ; preds = %entry
  %call1 = call i32 @get_int(), !dbg !15
  br label %end, !dbg !15

if_false:                                         ; preds = %entry
  br label %end, !dbg !16

end:                                              ; preds = %if_false, %if_true
  %yield = phi i32 [ %call1, %if_true ], [ 3, %if_false ], !dbg !16
  store i32 %yield, ptr %let_num, align 4, !dbg !13
  %load = load i32, ptr %let_num, align 4, !dbg !17
  %call2 = call {} @take_int(i32 %load), !dbg !17
  ret {} zeroinitializer, !dbg !18
}

; Function Attrs: nocallback nofree nosync nounwind speculatable willreturn memory(none)
declare void @llvm.dbg.declare(metadata, metadata, metadata) #0

attributes #0 = { nocallback nofree nosync nounwind speculatable willreturn memory(none) }

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "zrc test runner", isOptimized: false, flags: "zrc --fake-args", runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false)
!2 = !DIFile(filename: "test.zr", directory: "/fake/path")
!3 = distinct !DISubprogram(name: "test", linkageName: "test", scope: null, file: !2, line: 4, type: !4, scopeLine: 4, spFlags: DISPFlagDefinition, unit: !1, retainedNodes: !8)
!4 = !DISubroutineType(types: !5)
!5 = !{!6}
!6 = !DICompositeType(tag: DW_TAG_structure_type, name: "struct {}", scope: !2, file: !2, elements: !7)
!7 = !{}
!8 = !{!9}
!9 = !DILocalVariable(name: "num", scope: !10, file: !2, line: 6, type: !12)
!10 = distinct !DILexicalBlock(scope: !11, file: !2, line: 4, column: 11)
!11 = distinct !DILexicalBlock(scope: !3, file: !2, line: 4, column: 11)
!12 = !DIBasicType(name: "i32")
!13 = !DILocation(line: 6, column: 9, scope: !10)
!14 = !DILocation(line: 6, column: 15, scope: !10)
!15 = !DILocation(line: 6, column: 28, scope: !10)
!16 = !DILocation(line: 6, column: 40, scope: !10)
!17 = !DILocation(line: 7, column: 14, scope: !10)
!18 = !DILocation(line: 8, column: 1, scope: !10)
